Remove build tool references and pom
Co-authored-by: itsblackviva <itsblackviva@gmail.com>